--- a/lawbot/src/Components/Register/Register.module.css
+++ b/lawbot/src/Components/Register/Register.module.css
@@ -111,9 +111,10 @@ a{
 
 .action{
     display:flex;
+    padding-top:25px;
     width:100%;
     flex-direction: column;
-    gap:25px;
+    gap:15px;
     height:150px;
 }
 
@@ -198,6 +199,19 @@ a{
   cursor: pointer; 
 }
 
+
+.action p{
+    color:red;
+    display:flex;
+    width:100%;
+    height: 0px;
+    margin:0px;
+    padding:0px;
+    font-size: 0.9rem;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
 
 @media (max-width: 1600px) {
     .right{
